language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/borrow_global_bad5.exp
error: 

   ┌── tests/move_check/translated_ir_tests/borrow_tests/borrow_global_bad5.move:7:29 ───
   │
 8 │         let t2_ref = borrow_global_mut<T>(Transaction::sender());
   │                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid borrowing of resource 'T'
   ·
 7 │         let t1_ref = if (b) borrow_global_mut<T>(Transaction::sender()) else &mut t;
   │                             ------------------------------------------- It is still being mutably borrowed by this reference
   │

